source/_sass/_layout.scss
body {
  background: url(/assets/images/theme/bg-stripe.jpg) repeat;
}

.no-js .top-bar {
  display: none;
}

@media screen and (min-width: 40em) {
  .no-js .top-bar {
    display: block;
  }

  .no-js .title-bar {
    display: none;
  }
}

#header {
  margin-top: 1rem;
}

#social-media-list li a {
  padding: 0.2rem;
}

#footer {
  background: #6b6b6b url("/assets/images/theme/banner-under-shadow-light.png") no-repeat top center;
  min-height: 75px;
  margin-top: 30px;
  padding-top: 20px;
  a, p {
    color: #fff;
    font-weight: bold;
  }
}

.row {
  max-width: 900px;
}

@media screen and (min-width: 1024px) {
  .product-header {
    background: #dfdcdc url('/assets/images/theme/banner-product-gradient.png') repeat-x;
  }
}

.product-header {
  background-color: #dfdcdc;
  padding: 30px 0;
}

.orbit-container {
  height: auto !important;
  width: auto;
}

.slider-main {
  margin-bottom: 30px;
  position: relative;
  .orbit-bullets {
    margin: 0;
    position: absolute;
    z-index: 200;
    text-align: right;
    right: 70px;
    top: 5px;
    button, button:visited {
      background: url(/assets/images/theme/pagination-non-active.png) no-repeat scroll left top transparent;
      cursor: pointer;
      display: block;
      height: 15px;
      width: 15px;
      margin: 6px 0 0 5px;
      font-size: 0px;
      display: inline-block;
      &.is-active {
        background: url(/assets/images/theme/pagination-active.png) no-repeat scroll left top transparent;
      }
    }
  }
}

.social-share-container {
  margin-bottom: 30px;
  a {
    background-image: url('/assets/images/theme/social-icons.png');
    background-repeat: no-repeat;
    display: inline-block;
    text-indent: -999em;
    height: 42px;
    margin-right: 8px;
    width: 42px;
    &.social-share-facebook {
      background-position: -51px 0;
      &:hover {
        background-position: -51px -43px;
      }
    }
    &.social-share-twitter {
      background-position: -101px 0;
      &:hover {
        background-position: -101px -43px;
      }
    }
  }
  #zeroclipboard-dynamic-id-0-zeroclipboard-wrapper div {
    background-image: url('/assets/images/theme/social-icons.png');
    background-repeat: no-repeat;
    background-position: -151px 0;
    cursor: pointer;
    &:hover {
      background-position: -151px -43px;
    }
  }
  a.social-share-pinterest {
    background-position: 0 0;
    &:hover {
      background-position: 0 -43px;
    }
  }
}

.product-category {
  h2 {
    float: left;
    line-height: 29px;
    margin-bottom: 0;
  }
  h3 {
    color: #fff;
    font-family: Josefin Slab;
    line-height: 54px;
    font-size: 65px;
    font-style: normal;
    margin: 180px 0 10px;
    text-transform: uppercase;
  }
  .tabs {
    background: none;
    border: none;
    float: right;
    height: auto;
    text-transform: lowercase;
    li {
      float: left;
      height: 34px;
      margin: 0 2px;
      padding: 0;
      height: auto;
      a {
        background: url('/assets/images/theme/bg-quicktabs.png') no-repeat;
        color: #737373;
        display: block;
        font-size: 14px;
        height: 29px;
        line-height: 20px;
        padding: 0;
        padding-top: 5px;
        text-align: center;
        width: 110px;
      }
      &:last-child {
        margin-right: 0;
      }
      &.is-active a {
        background-position: 0 -34px;
      }
    }
  }
  .tabs-content {
    background: url('/assets/images/theme/bg-qtproducts-shadow.png') no-repeat center bottom;
    border: none;
    clear: both;
    margin-bottom: 30px;
    padding-bottom: 20px;
    position: relative;
  }
  .tabs-panel {
    background: url('/assets/images/theme/bg-qtproducts.jpg') repeat;
    clear: both;
    min-height: 380px;
    padding: 20px;
    position: relative;
  }
  .absolute-bottom-right {
    bottom: 20px;
    position: absolute;
    right: 20px;
  }
}

